adding translated content

--- a/_posts/en/pages/2014-08-25-about.md
+++ b/_posts/en/pages/2014-08-25-about.md
@@ -27,7 +27,7 @@ Everyone is free to attend meetups even if you're not a member. Fees are **entir
 
 ### How to get involved
 
-* If you'd like to get in touch with us then feel free to email [info@kunmingbeer.org](mailto:info@kunmingbeer.org)
+* If you'd like to get in touch with us then feel free to email [hello@kunmingbeer.org](mailto:hello@kunmingbeer.org)
 
 * Keep checking this site for updates about upcoming events, or otherwise follow us on [Twitter](https://twitter.com/kunmingbeer), [Facebook](https://facebook.com/kunmingbeer), or [Weibo](http://www.weibo.com/u/5228263128).
 
