--- a/_posts/zh/pages/2014-08-25-guanyu.md
+++ b/_posts/zh/pages/2014-08-25-guanyu.md
@@ -5,38 +5,36 @@ comments: true
 permalink: /zh/guanyu-women
 ---
 
-# About the Kunming Homebrewing Society
-#### The society dedicated to everything about drinking and brewing craft beer, mead, and cider in Kunming, China.
+# 关于昆明自酿啤酒协会
+#### 该协会致力于一切有关在昆明酿工艺的啤酒苹果酒和蜂蜜酒
 
-![Kunming Homebrewing Society Logo](/assets/images/logo-red.png)
+![昆明自年啤酒协会的标志](/assets/images/logo-red.png)
 
-Brewing is both an art and a science - understanding the science and appreciating the artwork will help you enjoy beer even more. It's not always easy to find all the safe and reliable equipment and quality ingredients in China and so meeting up with other homebrewers is the best way to learn what you need to know.
+“昆明自酿啤酒协会”是为对自酿啤酒、苹果酒和蜂蜜酒感兴趣的朋友提供的一个分享、交流和学习的平台。酿啤酒是一种艺术，也是一种科学，理解科学和欣赏艺术作品将帮助你更懂，并更喜欢喝啤酒。在中国很难买到安全、可靠的设备和原材料，因此，与广大自酿啤酒的朋友进行交流和分享是非常重要的了解渠道。
 
-Our organisation is dedicated to spreading the knowledge, culture, and appreciation of real beer in China. Membership is open to everyone, no matter brewing experience - everyone from professional brewers to beginners preparing to brew their first batch. We meet on the 3rd Saturday of every month at a different Kunming bar each time. A meeting will include a short presentation on a brewing topic, welcoming new members, open discussions, and of course beer tasting. We encourage everyone to bring samples of their homebrew for everyone to taste!
+我们致力于在昆明传播知识、文化和欣赏真正的啤酒。协会是向所有人开放的，无论您是新手还是老手。我们将定期于每个月的第三个周六开展酒吧聚会，地点会安排于不同的酒吧，每次聚会将会根据一个自酿酒话题进行演讲、讨论等，当然还有啤酒品尝！聚会中，我们鼓励大家带自酿的啤酒给大家品尝！欢迎所有感兴趣的朋友参加聚会，即使您不是我们的会员。
 
-**Annual membership fee**: ¥200 (¥300 for families) 
+**成员年费**: ¥200 (家庭¥300) 
 
-**Beer tasting fees**: ¥40 for non-members, ¥20 for members 
-
-Everyone is free to attend meetups even if you're not a member. Fees are **entirely optional** and are collected to pay for an ingredients co-op for members and to cover costs of beer tasting, general admin, and participating in brew festivals. Membership runs annually starting each Chinese New Year and you can join at any of our monthly meetups.
+**啤酒品尝费**: 非成员¥40, 成员¥20
 
 <div class="message">
-	<p>I look forward to raising a glass with you soon.</p>
-	<p><strong>Darryl Snow</strong>,<br>
-	<em>President, the Kunming Homebrewing Society</em></p>
+	<p>我很期待跟你捧杯</p>
+	<p><strong>雪龘龙</strong>,<br>
+	<em>会长, 昆明自酿啤酒协会</em></p>
 </div>
 
-### How to get involved
+### 如何参与
 
-* If you'd like to get in touch with us then feel free to email [info@kunmingbeer.org](mailto:info@kunmingbeer.org)
+* 你可以给我们发个邮件： [hello@kunmingbeer.org](mailto:hello@kunmingbeer.org)
 
-* Keep checking this site for updates about upcoming events, or otherwise follow us on [Twitter](https://twitter.com/kunmingbeer), [Facebook](https://facebook.com/kunmingbeer), or [Weibo](http://www.weibo.com/u/5228263128).
+* 参加我们的活动，为最新信息经常来查检本网站或以其他方式跟随我们：[Twitter](https://twitter.com/kunmingbeer), [Facebook](https://facebook.com/kunmingbeer), or [微博](http://www.weibo.com/u/5228263128).
 
-* Better yet, join our Wechat group:
+* 加入我们的微信群:
 
-![KHS Wechat Group QR Code](/media/2014-08-20-inaugural-meetup/qr-code.jpg)
+![KHS微信编码](/media/2014-08-20-inaugural-meetup/qr-code.jpg)
 
-### Handy Links
+### 连接
 
-* [Current Members](/members.html)
-* [Useful Files](/files.html)
+* [当前成员](/zh/huiyuan)
+* [有用的文件](/zh/wenjian)
