--- a/_posts/zh/pages/2014-08-25-huiyuan.md
+++ b/_posts/zh/pages/2014-08-25-huiyuan.md
@@ -1,51 +1,51 @@
 ---
 layout: page
-title: Who reeeeaally likes beer?
+title: 谁特特特特别喜欢和啤酒？
 comments: true
 permalink: /zh/huiyuan
 ---
 
-# (2) KHS Members
+# (2) KHS成员
 
-> NOTE: some members may have opted to remain private
+> 注意: > 注意: 有些成员可能选了保持私密
 
-## Officers
+## 官员
 
 <table>
 	<thead>
 		<tr>
-			<td>Role</td>
-			<td>Name</td>
-			<td>Contact</td>
+			<td>任务</td>
+			<td>名字</td>
+			<td>联系</td>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
-			<td>President</td>
-			<td>Darryl Snow</td>
+			<td>会长</td>
+			<td>雪龘龙</td>
 			<td>
 				<ul>
 					<li><a href="mailto:dazsnow@gmail.com" title="Email Darryl">dazsnow@gmail.com</a></li>
 					<li><a href="tel:18612009701" title="Phone Darryl">186-1200-9701</a></li>
-					<li><strong>Wechat</strong>: xuedalong</li>
+					<li><strong>微信</strong>: xuedalong</li>
 				</ul>
 			</td>
 		</tr>
 		<tr>
-			<td>Cashier</td>
-			<td><i>TBC</i></td>
+			<td>出纳员</td>
+			<td><i>待定</i></td>
 			<td></td>
 		</tr>
 		<tr>
-			<td>Secretary</td>
-			<td><i>TBC</i></td>
+			<td>秘书</td>
+			<td><i>待定</i></td>
 			<td></td>
 		</tr>
 	</tbody>
 </table>
 
-## Other Members
+## 其他成员
 
-| Name | Contact |
-|------|---------|
-| 霍婕  |         |
+| 名字 | 联系 |
+|-----|---------|
+| 霍婕 |         |
