--- a/_posts/zh/pages/2014-08-25-wenjian.md
+++ b/_posts/zh/pages/2014-08-25-wenjian.md
@@ -1,14 +1,13 @@
 ---
 layout: page
-title: Useful Files
+title: 有用的文件
 comments: true
 permalink: /zh/wenjian
 ---
 
-* [Introduction to Brewing](/media/files/introduction-to-brewing--english.pdf), just the basics - what you need and what you do with it
-* [Basic Brewing Equipment from Taobao](/media/files/brew-equipment-from-taobao.xls)
-* [Equipment List](/media/files/equipment-list.docx), everything you need to get started
-* [Grain Profiles](/media/files/grains.pdf), what types of grains there are, how they are used, and what they are used for
-* [Beat the Heat](/media/files/beat-the-heat.pdf), a guide to brewing in hot climates
+* [酿啤酒简介](/media/files/introduction-to-brewing--chinese.pdf), 基础知识 － 你需要什么设备啊原料啊，怎么做等等
+* [淘宝上的设备](/media/files/brew-equipment-from-taobao.xls)
+* [粮食形象](/media/files/grains.pdf), 有什么类型的粮食，如何用等等
+* [Beat the Heat](/media/files/beat-the-heat.pdf), 炎热气候中酿酒指南（英文）
 
-!["The Beer Spectrum"](/media/files/beer-spectrum.jpg)
+!["啤酒范伟图"](/media/files/beer-spectrum.jpg)
