fixing image link

--- a/_posts/en/2014-08-30-smwc-hops.md
+++ b/_posts/en/2014-08-30-smwc-hops.md
@@ -2,7 +2,7 @@
 layout: post
 title: "SMWC Hops"
 quote: Kunming's Biggest Range of Imported Beers
-image: /media/2014-08-30-smwc-hops/cover.jpg
+image: /media/2014-08-30-smwc-hops/cover.JPG
 video: false
 ---
 
