fix broken image on about pages

--- a/_posts/en/pages/2014-08-21-about.md
+++ b/_posts/en/pages/2014-08-21-about.md
@@ -33,7 +33,7 @@ Everyone is free to attend meetups even if you're not a member. Fees are **entir
 
 * Better yet, join our Wechat group:
 
-![KHS Wechat Group QR Code](/media/2014-08-19-inaugural-meetup/qr-code.jpg)
+![KHS Wechat Group QR Code](/media/qr-code.jpg)
 
 ### Handy Links
 
