add october meetup post

--- a/_posts/en/2014-08-30-smwc-hops.md
+++ b/_posts/en/2014-08-30-smwc-hops.md
@@ -14,7 +14,7 @@ Yesterday we discovered this little gem hidden just inside the North 2nd Ring Ro
 
 !["SMWC Hops"](/media/2014-08-30-smwc-hops/3.jpg)
 
-It's not too hard to find - from Baiyun Lu (白云路) head North on PanLong East Road (), past a row of bars, until you come to a residential estate. SMWC Hops is on the ground floor.
+It's not too hard to find - from Baiyun Lu (白云路) head North on PanJiang East Road (盘江东路), past a row of bars, until you come to a residential estate. SMWC Hops is on the ground floor. The address is: Kunming, PanLong Qu, PanJiang Dong Lu, BeiTai HuaYuan, Unit Ds1-111 (昆明市盘龙区盘江东路北泰花园商铺Ds1-111).
 
 !["Map to SMWC Hops"](/media/2014-08-30-smwc-hops/map-english.png)
 
