add november meetup, hong kong brewshop post, and update files

--- a/_posts/en/pages/2014-08-22-files.md
+++ b/_posts/en/pages/2014-08-22-files.md
@@ -4,9 +4,11 @@ title: Useful Files
 comments: true
 ---
 
+* [KHS Coop ingredients & price list](/media/files/coop.pdf)
 * [Introduction to Brewing](/media/files/introduction-to-brewing--english.pdf), just the basics - what you need and what you do with it
-* [Basic Brewing Equipment from Taobao](/media/files/brew-equipment-from-taobao.xls)
+* [Basic Brewing Equipment from Taobao](/media/files/taobao-list.pdf)
 * [Grain Profiles](/media/files/grains.pdf), what types of grains there are, how they are used, and what they are used for
 * [Beat the Heat](/media/files/beat-the-heat.pdf), a guide to brewing in hot climates
+* [All About Mashing - October 2014 Meetup Subject](/media/files/mashing.pdf)
 
 !["The Beer Spectrum"](/media/files/beer-spectrum.jpg)
