--- a/_posts/en/pages/2014-08-24-members.md
+++ b/_posts/en/pages/2014-08-24-members.md
@@ -4,7 +4,7 @@ title: Who reeeeaally likes beer?
 comments: true
 ---
 
-# (2) KHS Members
+# (9) KHS Members
 
 > NOTE: some members may have opted to remain private
 
@@ -45,6 +45,45 @@ comments: true
 
 ## Other Members
 
-| Name | Contact |
-|------|---------|
-| 霍婕  |         |
+<table>
+	<thead>
+		<tr>
+			<td>Name</td>
+			<td>Contact</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>霍婕 (HuoJie)</td>
+			<td>huojie1102@gmail.com</td>
+		</tr>
+		<tr>
+			<td>Rosly</td>
+			<td>rosly.schofield@gmail.com</td>
+		</tr>
+		<tr>
+			<td>Ray</td>
+			<td>ray.denning@gmail.com</td>
+		</tr>
+		<tr>
+			<td>David</td>
+			<td>tedheshi@gmail.com</td>
+		</tr>
+		<tr>
+			<td>Charlie</td>
+			<td>charlie.heath@yahoo.com</td>
+		</tr>
+		<tr>
+			<td>Rhett</td>
+			<td>rhett_d_harrison@yahoo.co.uk</td>
+		</tr>
+		<tr>
+			<td>Caity</td>
+			<td>caitlin.carlier@gmail.com</td>
+		</tr>
+		<tr>
+			<td>Nick</td>
+			<td>nickjcarr@gmail.com</td>
+		</tr>
+	</tbody>
+</table>
