--- a/_posts/zh/pages/2014-08-24-huiyuan.md
+++ b/_posts/zh/pages/2014-08-24-huiyuan.md
@@ -5,7 +5,7 @@ comments: true
 permalink: /zh/huiyuan
 ---
 
-# (2) KHS成员
+# (9) KHS成员
 
 > 注意: > 注意: 有些成员可能选了保持私密
 
@@ -46,6 +46,45 @@ permalink: /zh/huiyuan
 
 ## 其他成员
 
-| 名字 | 联系 |
-|-----|---------|
-| 霍婕 |         |
+<table>
+	<thead>
+		<tr>
+			<td>名字</td>
+			<td>联系</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>霍婕 (HuoJie)</td>
+			<td>huojie1102@gmail.com</td>
+		</tr>
+		<tr>
+			<td>Rosly</td>
+			<td>rosly.schofield@gmail.com</td>
+		</tr>
+		<tr>
+			<td>Ray</td>
+			<td>ray.denning@gmail.com</td>
+		</tr>
+		<tr>
+			<td>David</td>
+			<td>tedheshi@gmail.com</td>
+		</tr>
+		<tr>
+			<td>Charlie</td>
+			<td>charlie.heath@yahoo.com</td>
+		</tr>
+		<tr>
+			<td>Rhett</td>
+			<td>rhett_d_harrison@yahoo.co.uk</td>
+		</tr>
+		<tr>
+			<td>Caity</td>
+			<td>caitlin.carlier@gmail.com</td>
+		</tr>
+		<tr>
+			<td>Nick</td>
+			<td>nickjcarr@gmail.com</td>
+		</tr>
+	</tbody>
+</table>
