--- a/_posts/zh/pages/2014-08-22-wenjian.md
+++ b/_posts/zh/pages/2014-08-22-wenjian.md
@@ -5,9 +5,11 @@ comments: true
 permalink: /zh/wenjian
 ---
 
+* [KHS合作社价格表单](/media/files/coop.pdf)
 * [酿啤酒简介](/media/files/introduction-to-brewing--chinese.pdf), 基础知识 － 你需要什么设备啊原料啊，怎么做等等
-* [淘宝上的设备](/media/files/brew-equipment-from-taobao.xls)
+* [淘宝上的设备](/media/files/taobao-list.pdf)
 * [粮食形象](/media/files/grains.pdf), 有什么类型的粮食，如何用等等
 * [Beat the Heat](/media/files/beat-the-heat.pdf), 炎热气候中酿酒指南（英文）
+* [糖化过程 - 2014年10月聚会的主题](/media/files/mashing-chinese.pdf)
 
 !["啤酒范伟图"](/media/files/beer-spectrum.jpg)
