--- a/_posts/en/pages/2014-08-22-files.md
+++ b/_posts/en/pages/2014-08-22-files.md
@@ -5,10 +5,14 @@ comments: true
 ---
 
 * [KHS Coop ingredients & price list](/media/files/coop.pdf)
-* [Introduction to Brewing](/media/files/introduction-to-brewing--english.pdf), just the basics - what you need and what you do with it
+
 * [Basic Brewing Equipment from Taobao](/media/files/taobao-list.pdf)
+* [Introduction to Brewing](/media/files/introduction-to-brewing--english.pdf), just the basics - what you need and what you do with it
+
 * [Grain Profiles](/media/files/grains.pdf), what types of grains there are, how they are used, and what they are used for
 * [Beat the Heat](/media/files/beat-the-heat.pdf), a guide to brewing in hot climates
+
 * [All About Mashing - October 2014 Meetup Subject](/media/files/mashing.pdf)
+* [The Basics of Lautering - November 2014 Meetup Subject](/media/files/lautering.pdf)
 
 !["The Beer Spectrum"](/media/files/beer-spectrum.jpg)
