updating coop prices and member data

--- a/_posts/en/pages/2014-08-24-members.md
+++ b/_posts/en/pages/2014-08-24-members.md
@@ -85,5 +85,9 @@ comments: true
 			<td>Nick</td>
 			<td>nickjcarr@gmail.com</td>
 		</tr>
+		<tr>
+			<td>Reed</td>
+			<td>reed.hall90@gmail.com</td>
+		</tr>
 	</tbody>
 </table>
