--- a/_posts/zh/pages/2014-08-24-huiyuan.md
+++ b/_posts/zh/pages/2014-08-24-huiyuan.md
@@ -86,5 +86,9 @@ permalink: /zh/huiyuan
 			<td>Nick</td>
 			<td>nickjcarr@gmail.com</td>
 		</tr>
+		<tr>
+			<td>Reed</td>
+			<td>reed.hall90@gmail.com</td>
+		</tr>
 	</tbody>
 </table>
