--- a/_posts/zh/pages/2014-08-22-wenjian.md
+++ b/_posts/zh/pages/2014-08-22-wenjian.md
@@ -11,5 +11,6 @@ permalink: /zh/wenjian
 * [粮食形象](/media/files/grains.pdf), 有什么类型的粮食，如何用等等
 * [Beat the Heat](/media/files/beat-the-heat.pdf), 炎热气候中酿酒指南（英文）
 * [糖化过程 - 2014年10月聚会的主题](/media/files/mashing-chinese.pdf)
+* [怪味 - 2015年4月聚会的主题](/media/files/off-flavours.pdf)
 
 !["啤酒范伟图"](/media/files/beer-spectrum.jpg)
