--- a/_posts/zh/pages/2014-08-24-huiyuan.md
+++ b/_posts/zh/pages/2014-08-24-huiyuan.md
@@ -55,40 +55,22 @@ permalink: /zh/huiyuan
 	</thead>
 	<tbody>
 		<tr>
-			<td>霍婕 (HuoJie)</td>
-			<td>huojie1102@gmail.com</td>
+			<td>霍婕</td>
 		</tr>
 		<tr>
-			<td>Rosly</td>
-			<td>rosly.schofield@gmail.com</td>
+			<td>Rosly Schofield</td>
 		</tr>
 		<tr>
-			<td>Ray</td>
-			<td>ray.denning@gmail.com</td>
+			<td>老邓</td>
 		</tr>
 		<tr>
-			<td>David</td>
-			<td>tedheshi@gmail.com</td>
+			<td>Charlie Heath</td>
 		</tr>
 		<tr>
-			<td>Charlie</td>
-			<td>charlie.heath@yahoo.com</td>
+			<td>John</td>
 		</tr>
 		<tr>
-			<td>Rhett</td>
-			<td>rhett_d_harrison@yahoo.co.uk</td>
-		</tr>
-		<tr>
-			<td>Caity</td>
-			<td>caitlin.carlier@gmail.com</td>
-		</tr>
-		<tr>
-			<td>Nick</td>
-			<td>nickjcarr@gmail.com</td>
-		</tr>
-		<tr>
-			<td>Reed</td>
-			<td>reed.hall90@gmail.com</td>
+			<td>Dave</td>
 		</tr>
 	</tbody>
 </table>
