--- a/_posts/en/pages/2014-08-22-files.md
+++ b/_posts/en/pages/2014-08-22-files.md
@@ -12,6 +12,7 @@ comments: true
 * [The Basics of Lautering - November 2014 Meetup Subject](/media/files/lautering.pdf)
 * [Boiling & Fermenting - December 2014 Meetup Subject](/media/files/boiling-and-fermenting.pdf)
 * [Grain Varieties - February 2015 Meetup Subject](/media/files/grain-varieties.pdf)
+* [Off Flavours - April 2015 Meetup Subject](/media/files/off-flavours.pdf)
 
 * [Grain Profiles](/media/files/grains.pdf), what types of grains there are, how they are used, and what they are used for
 * [Beat the Heat](/media/files/beat-the-heat.pdf), a guide to brewing in hot climates
