add may meetup, update coop list

--- a/_posts/zh/pages/2014-08-22-wenjian.md
+++ b/_posts/zh/pages/2014-08-22-wenjian.md
@@ -12,5 +12,6 @@ permalink: /zh/wenjian
 * [Beat the Heat](/media/files/beat-the-heat.pdf), 炎热气候中酿酒指南（英文）
 * [糖化过程 - 2014年10月聚会的主题](/media/files/mashing-chinese.pdf)
 * [怪味 - 2015年4月聚会的主题](/media/files/off-flavours.pdf)
+* [怪味2 - 2015年5月聚会的主题](/media/files/off-flavours2.pdf)
 
 !["啤酒范伟图"](/media/files/beer-spectrum.jpg)
