update name and logo

--- a/_posts/en/2015-06-22-june-2015-meetup.md
+++ b/_posts/en/2015-06-22-june-2015-meetup.md
@@ -22,7 +22,7 @@ Happiness Bar<br>
 
 ## Topic
 
-Last weekend marked the 200th anniversary of the battle of waterloo, which not only reminds us that it's been 200 years since the french stopped winning wars, but also that tiny Belgium despite being the site of many an epic battle of European powers has managed to maintain a truly great beer tradition. Luckily for us here in Kunming, a good variety of Belgian beers is easy to find.
+Last weekend marked the 200th anniversary of the battle of waterloo, which not only reminds us that it's been 200 years since the French stopped winning wars, but also that tiny Belgium despite being the site of many an epic battle of European powers has managed to maintain a truly great beer tradition. Luckily for us here in Kunming, a good variety of Belgian beers is easy to find.
 
 We'll be discussing the unique characteristics of Belgian strong ales, as well as learning how to make them and of course tasting some fine samples!
 
