--- a/_posts/zh/pages/2014-08-21-guanyu.md
+++ b/_posts/zh/pages/2014-08-21-guanyu.md
@@ -5,14 +5,14 @@ comments: true
 permalink: /zh/guanyu-women
 ---
 
-# 关于昆明自酿啤酒协会
+# 关于昆明精酿啤酒协会
 #### 该协会致力于一切有关在昆明酿工艺的啤酒苹果酒和蜂蜜酒
 
 ![昆明自年啤酒协会的标志](/assets/images/logo-red.png)
 
-“昆明自酿啤酒协会”是为对自酿啤酒、苹果酒和蜂蜜酒感兴趣的朋友提供的一个分享、交流和学习的平台。酿啤酒是一种艺术，也是一种科学，理解科学和欣赏艺术作品将帮助你更懂，并更喜欢喝啤酒。在中国很难买到安全、可靠的设备和原材料，因此，与广大自酿啤酒的朋友进行交流和分享是非常重要的了解渠道。
+“昆明精酿啤酒协会”是为对精酿啤酒、苹果酒和蜂蜜酒感兴趣的朋友提供的一个分享、交流和学习的平台。酿啤酒是一种艺术，也是一种科学，理解科学和欣赏艺术作品将帮助你更懂，并更喜欢喝啤酒。在中国很难买到安全、可靠的设备和原材料，因此，与广大自酿啤酒的朋友进行交流和分享是非常重要的了解渠道。
 
-我们致力于在昆明传播知识、文化和欣赏真正的啤酒。协会是向所有人开放的，无论您是新手还是老手。我们将定期于每个月的第三个周六开展酒吧聚会，地点会安排于不同的酒吧，每次聚会将会根据一个自酿酒话题进行演讲、讨论等，当然还有啤酒品尝！聚会中，我们鼓励大家带自酿的啤酒给大家品尝！欢迎所有感兴趣的朋友参加聚会，即使您不是我们的会员。
+我们致力于在昆明传播知识、文化和欣赏真正的啤酒。协会是向所有人开放的，无论您是新手还是老手。我们将定期于每个月的第三个周六开展酒吧聚会，地点会安排于不同的酒吧，每次聚会将会根据一个精酿酒话题进行演讲、讨论等，当然还有啤酒品尝！聚会中，我们鼓励大家带自酿的啤酒给大家品尝！欢迎所有感兴趣的朋友参加聚会，即使您不是我们的会员。
 
 **成员年费**: ¥200 (家庭¥300) 
 
@@ -21,7 +21,7 @@ permalink: /zh/guanyu-women
 <div class="message">
 	<p>我很期待跟你捧杯</p>
 	<p><strong>雪龘龙</strong>,<br>
-	<em>会长, 昆明自酿啤酒协会</em></p>
+	<em>会长, 昆明精酿啤酒协会</em></p>
 </div>
 
 ### 如何参与
