--- a/_posts/zh/pages/2014-08-21-guanyu.md
+++ b/_posts/zh/pages/2014-08-21-guanyu.md
@@ -14,9 +14,7 @@ permalink: /zh/guanyu-women
 
 我们致力于在昆明传播知识、文化和欣赏真正的啤酒。协会是向所有人开放的，无论您是新手还是老手。我们将定期于每个月的第三个周二开展酒吧聚会，地点会安排于不同的酒吧，每次聚会将会根据一个精酿酒话题进行演讲、讨论等，当然还有啤酒品尝！聚会中，我们鼓励大家带自酿的啤酒给大家品尝！欢迎所有感兴趣的朋友参加聚会，即使您不是我们的会员。
 
-**成员年费**: ¥200 (家庭¥300) 
-
-**啤酒品尝费**: 非成员¥40, 成员¥20
+**成员年费**: ¥200
 
 <div class="message">
 	<p>我很期待跟你捧杯</p>
