add september meetup notes

--- a/_posts/zh/pages/2014-08-22-wenjian.md
+++ b/_posts/zh/pages/2014-08-22-wenjian.md
@@ -13,5 +13,6 @@ permalink: /zh/wenjian
 * [糖化过程 - 2014年10月聚会的主题](/media/files/mashing-chinese.pdf)
 * [怪味 - 2015年4月聚会的主题](/media/files/off-flavours.pdf)
 * [怪味2 - 2015年5月聚会的主题](/media/files/off-flavours2.pdf)
+* [啤酒与食物 - 2015年9月聚会的主题](/media/files/beer-and-food-chinese.pdf)
 
 !["啤酒范伟图"](/media/files/beer-spectrum.jpg)
