--- a/_posts/en/pages/2014-08-22-files.md
+++ b/_posts/en/pages/2014-08-22-files.md
@@ -14,6 +14,8 @@ comments: true
 * [Grain Varieties - February 2015 Meetup Subject](/media/files/grain-varieties.pdf)
 * [Off Flavours - April 2015 Meetup Subject](/media/files/off-flavours.pdf)
 * [Off Flavours 2 - May 2015 Meetup Subject](/media/files/off-flavours2.pdf)
+* [Beer and Food - September 2015 Meetup Subject](/media/files/beer-and-food.pdf)
+
 
 * [Grain Profiles](/media/files/grains.pdf), what types of grains there are, how they are used, and what they are used for
 * [Beat the Heat](/media/files/beat-the-heat.pdf), a guide to brewing in hot climates
