add october meetup notes

--- a/_posts/en/pages/2014-08-22-files.md
+++ b/_posts/en/pages/2014-08-22-files.md
@@ -15,6 +15,7 @@ comments: true
 * [Off Flavours - April 2015 Meetup Subject](/media/files/off-flavours.pdf)
 * [Off Flavours 2 - May 2015 Meetup Subject](/media/files/off-flavours2.pdf)
 * [Beer and Food - September 2015 Meetup Subject](/media/files/beer-and-food.pdf)
+* [American Pale Ale - October 2015 Meetup Subject](/media/files/pale-ale.pdf)
 
 
 * [Grain Profiles](/media/files/grains.pdf), what types of grains there are, how they are used, and what they are used for
