--- a/_posts/zh/pages/2014-08-22-wenjian.md
+++ b/_posts/zh/pages/2014-08-22-wenjian.md
@@ -14,5 +14,6 @@ permalink: /zh/wenjian
 * [怪味 - 2015年4月聚会的主题](/media/files/off-flavours.pdf)
 * [怪味2 - 2015年5月聚会的主题](/media/files/off-flavours2.pdf)
 * [啤酒与食物 - 2015年9月聚会的主题](/media/files/beer-and-food-chinese.pdf)
+* [美式淡色艾尔 - 2015年10月聚会的主题](/media/files/pale-ale.pdf)
 
 !["啤酒范伟图"](/media/files/beer-spectrum.jpg)
