add december meetup

--- a/_posts/en/pages/2014-08-22-files.md
+++ b/_posts/en/pages/2014-08-22-files.md
@@ -16,9 +16,11 @@ comments: true
 * [Off Flavours 2 - May 2015 Meetup Subject](/media/files/off-flavours2.pdf)
 * [Beer and Food - September 2015 Meetup Subject](/media/files/beer-and-food.pdf)
 * [American Pale Ale - October 2015 Meetup Subject](/media/files/pale-ale.pdf)
+* [Hops - December 2015 Meetup Subject](/media/files/hops.pdf)
 
 
 * [Grain Profiles](/media/files/grains.pdf), what types of grains there are, how they are used, and what they are used for
+* [Hop Profiles](/media/files/hop-varieties.pdf), all the types of hops, their acid levels, and flavour profiles
 * [Beat the Heat](/media/files/beat-the-heat.pdf), a guide to brewing in hot climates
 
 !["The Beer Spectrum"](/media/files/beer-spectrum.jpg)
