--- a/_posts/zh/pages/2014-08-22-wenjian.md
+++ b/_posts/zh/pages/2014-08-22-wenjian.md
@@ -15,5 +15,8 @@ permalink: /zh/wenjian
 * [怪味2 - 2015年5月聚会的主题](/media/files/off-flavours2.pdf)
 * [啤酒与食物 - 2015年9月聚会的主题](/media/files/beer-and-food-chinese.pdf)
 * [美式淡色艾尔 - 2015年10月聚会的主题](/media/files/pale-ale.pdf)
+* [啤酒花 - 2015年12月聚会的主题](/media/files/hops-chinese.pdf)
+
+* [啤酒花类型](/media/files/hop-varieties.pdf), 啤酒花的所有类型，它们的酸水平，和味道型材
 
 !["啤酒范伟图"](/media/files/beer-spectrum.jpg)
