add handout links

--- a/_posts/en/2015-06-22-june-2015-meetup.md
+++ b/_posts/en/2015-06-22-june-2015-meetup.md
@@ -28,6 +28,8 @@ We'll be discussing the unique characteristics of Belgian strong ales, as well a
 
 As usual, anyone is welcome to attend!
 
+* [Belgian Strong Ales - June 2014 Meetup Printout](/media/files/belgian-strong-ales.pdf)
+
 > If you have any trouble finding the location or want to ask anything about the meetup, then either phone on [186-1200-9701](tel:18612009701) or join our [Wechat Group](/media/qr-code.jpg).
 
 -----
